tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_length_3_multiple_paths_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - lib
    - deep
---
success: true
exit_code: 0
----- stdout -----
lib -> a -> deep_a -> deep
lib -> b -> deep_b -> deep

----- stderr -----
