tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_plain_format_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - lib
    - leaf
    - "-f"
    - plain
---
success: true
exit_code: 0
----- stdout -----
lib -> a -> leaf
lib -> b -> leaf

----- stderr -----
