tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_source_equals_target.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - a
    - a
---
success: true
exit_code: 0
----- stdout -----
a

----- stderr -----
