tests/int/deps_command/snapshots/integration__int__deps_command__paths__should_path_transitive_for_paths_fixture.snap
---
source: tests/int/deps_command/paths.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/paths
    - deps
    - "--path"
    - a
    - deep
---
success: true
exit_code: 0
----- stdout -----
a -> deep_a -> deep

----- stderr -----
